FIXING THE FORM TOOLS

--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -13,4 +13,7 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field %>
+    <%= form.text_field :name %>
+  </div>
+<% end %>
+exit
