--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back to Tool', @tool %> |
-<%= link_to 'Back to Tools', tools_path %>
+<%= link_to 'Back to Tool', @tool %> 
