new style in our page tools and tool

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,6 @@
 // Specific CSS for your home-page
+.half-screen-bg {
+    background-image: url("assets/images/tools.jpeg");
+    background-size: cover;
+    background-position: center;
+  }
