Have just added description and submit button to the edit and new.html.erb

--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -2,5 +2,12 @@
 
 <%= render 'form' %>
 
+<div>
+  <%= form.label :description %>
+  <%= form.text_area :description %>
+</div>
+
+<%= form.submit 'Update Tool' %>
+
 <%= link_to 'Back to Tool', @tool %> |
 <%= link_to 'Back to Tools', tools_path %>
