--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New Tool</h1>
 
-<%= render 'form' %>
+<%= render 'form' do |form| %>
+  <div>
+    <%= form.label :description %>
+    <%= form.text_area :description %>
+  </div>
+
+  <%= form.submit 'Create Tool' %>
+<% end %>
 
 <%= link_to 'Back to Tools', tools_path %>
