--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid half-screen-bg">
   <div class="row">
     <div class="col-md-6">
-      
+      <h1>Ola </h1>
     </div>
     <div class="col-md-6">
       
