--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -42,11 +42,9 @@
     
     <div class="btn-toolbar mt-4">
         <div class="mt-2">
-          <%= link_to 'Edit', edit_tool_path(@tool), class: "btn btn-primary" %>
+          <%= link_to 'Book', new_tool_booking_path(@tool), class: "btn btn-primary" %>
         </div>
-        <div class="mt-2">
-          <%= link_to 'Delete', tool_path(@tool), method: :delete, data: { confirm: 'Are you sure you want to delete this tool?' }, class: "btn btn-danger" %>
-        </div>
+
         <div class="mt-2">
           <%= link_to 'Back to Tools', tools_path, class: "btn btn-secondary" %>
         </div>
