--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -39,25 +39,24 @@
         }
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
-    
-    <div class="btn-toolbar mt-4">
-        <div class="mt-2">
-          <%= link_to 'Edit', edit_tool_path(@tool), class: "btn btn-primary" %>
-        </div>
-        <div class="mt-2">
-          <%= link_to 'Delete', tool_path(@tool), method: :delete, data: { confirm: 'Are you sure you want to delete this tool?' }, class: "btn btn-danger" %>
-        </div>
-        <div class="mt-2">
-          <%= link_to 'Back to Tools', tools_path, class: "btn btn-secondary" %>
-        </div>
+
+      <div class="btn-toolbar mt-4">
+          <div class="mt-2">
+            <%= link_to 'Edit', edit_tool_path(@tool), class: "btn btn-primary" %>
+          </div>
+          <div class="mt-2">
+            <%= link_to 'Delete', tool_path(@tool), method: :delete, data: { confirm: 'Are you sure you want to delete this tool?' }, class: "btn btn-danger" %>
+          </div>
+          <div class="mt-2">
+            <%= link_to 'Back to Tools', tools_path, class: "btn btn-secondary" %>
+          </div>
+      </div>
+          <% if !@booking.confirmed %>
+            <%= link_to 'Confirm Booking', confirm_booking_path(@booking), method: :patch, class: 'btn btn-primary' %>
+          <% end %>
+          <%= link_to 'Back to Bookings', bookings_path %>
     </div>
-    </div>
+
   </div>
-  
+
 </div>
-
-
-
-
-
-
