--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Tool</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h1>New Tool</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back to Tools', tools_path %>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
