--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-image: url("dirty-background");
+  margin: 10;
 }
 
 .navbar-lewagon .navbar-collapse {
