--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -3,13 +3,13 @@
     <div class="col-md-6 offset-md-3">
       <div class="image-container mt-4">
         <!-- Adicione suas imagens aqui -->
+        <%= cl_image_tag @tool.image.key, height: 300, width: 650, crop: :fill %>
       </div>
 
       <h1><%= @tool.name %></h1>
 
       <p><%= @tool.description %></p>
       <p><strong>Availability:</strong> <%= @tool.availability ? 'Available' : 'Not available' %></p>
-
 
       <p><strong>Address:</strong> <%= @tool.address %></p>
 
@@ -39,7 +39,8 @@
         }
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
-    
+
+
     <div class="btn-toolbar mt-4">
         <div class="mt-2">
           <%= link_to 'Book', new_tool_booking_path(@tool), class: "btn btn-primary" %>
@@ -48,14 +49,9 @@
         <div class="mt-2">
           <%= link_to 'Back to Tools', tools_path, class: "btn btn-secondary" %>
         </div>
+
     </div>
     </div>
   </div>
-  
+
 </div>
-
-
-
-
-
-
