changes made in the form for image uploading

--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -43,6 +43,14 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :image %>
+        <%= form.file_field :image, class: 'form-control' %>
+      </div>
+    </div>
+
 <br>
     <div class="row">
       <div class="col-md-12 d-flex justify-content-between">
