create part finished with attached file

--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -43,7 +43,16 @@
         </div>
       </div>
     </div>
-<br>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= form.label :photo %>
+          <%= form.file_field :photo, class: 'form-control' %>
+        </div>
+      </div>
+    </div>
+    <br>
     <div class="row">
       <div class="col-md-12 d-flex justify-content-between">
         <div class="form-actions">
