--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Bookings", bookings_path, class: "nav-link" %>
+            <%= link_to "Dashboard", user_dashboard_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "New Tool", new_tool_path, class: "nav-link" %>
@@ -23,7 +23,6 @@
             <%= image_tag "logo.png", class: "avatar", alt: "dropdown menu" %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Dashboard", user_dashboard_path, class: "dropdown-item" %>
               <%= link_to "Another action", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
