--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -2,11 +2,16 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="image-container mt-4">
-        <!-- Adicione suas imagens aqui -->
-        <%= cl_image_tag @tool.image.key, height: 300, width: 650, crop: :fill %>
+  <!-- Adicione suas imagens aqui -->
+        <% if @tool.photo.present? %>
+          <%= cl_image_tag @tool.photo.key, height: 300, width: 650, crop: :fill %>
+        <% else %>
+          <p>No image available</p>
+        <% end %>
       </div>
 
       <h1><%= @tool.name %></h1>
+
 
       <p><%= @tool.description %></p>
       <p><strong>Availability:</strong> <%= @tool.availability ? 'Available' : 'Not available' %></p>
