--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,21 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <div class="navbar-container">
-      <%= render "shared/navbar" unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
-     </div>
-     <br>
-    <%= yield %>
-     
-     <%= render "shared/flashes"%>
+  <body class=<%="body-bg" if current_page?(root_path)%>>
+
+    <div class="page-container">
+
+      <div class="navbar-container"><%= render "shared/navbar"  unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
+      </div>
+
+      <div class="content-container">
+        <%= yield %>
+        <%= render "shared/flashes"%>
+      </div>
+
+      <div class="footer-container"><%= render "shared/footer" %>
+      </div>
+
+    </div>
   </body>
 </html>
