--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background-image: url("dirty-background");
+  background-image: asset-url("dirty-background");
   margin: 10;
 }
 
