markers are marking

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -18,12 +18,11 @@
 
       <p><strong>Address:</strong> <%= @tool.address %></p>
 
-      <div id="map" style="height: 300px;"></div>
-
-      <div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+        <div style="width: 100%; height: 600px;"
+              data-controller="map"
+              data-map-markers-value="<%= @markers.to_json %>"
+              data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
 
 
     <div class="btn-toolbar mt-4">
