removed background image on home

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,6 @@
 <div class="paragraph" style="text-align:center;">
-  <em>
-    <span>ToolConnect;
+    <span>ToolConnect
       <br>
       ​</span>
-    </em>
-  <span>© COPYRIGHT 2023. ALL RIGHTS RESERVED.</span>
+  <span>© 2o23</span>
 </div>
