--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,19 +1,65 @@
 <div class="container">
   <h1>Welcome to Your Dashboard, <%= current_user.first_name %>!</h1>
+  
   <div class="card mt-4">
     <div class="card-header">
       <h2>Bookings:</h2>
     </div>
     <div class="card-body">
-      <% @bookings.each do |booking| %>
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title"><%= booking.rental_start %></h5>
-            <h5 class="card-title"><%= booking.rental_end %></h5>
-            <p class="card-text"><%= booking.status %></p>
+      <% if @bookings.empty? %>
+        <p>No bookings found.</p>
+      <% else %>
+        <% @bookings.each do |booking| %>
+          <div class="card mb-3 col-md-4">
+            <div class="card-body">
+              <h5 class="card-title">Rental Start: <%= booking.rental_start %></h5>
+              <h5 class="card-title">Rental End: <%= booking.rental_end %></h5>
+              <p class="card-text">Status: <%= booking.status %></p>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
   </div>
+
+  <br>
+
+  <div class="card mt-4">
+    <div class="card-header">
+      <h2>My Tools:</h2>
+    </div>
+    <div class="card-body">
+      <div class="row">
+        <% @tools.each do |tool| %>
+          <div class="card mb-3 col-md-4">
+            <% if tool.photo.attached? %>
+              <%= cl_image_tag(tool.photo.key, class: "card-img-top") %>
+            <% else %>
+              <p>No Image Available</p>
+            <% end %>
+            <div class="card-body">
+              <h5 class="card-title"><%= tool.name %></h5>
+              <h5 class="card-title"><%= tool.description %></h5>
+              <div class="btn-group">
+                <%= link_to "Edit", edit_tool_path(tool), class: "btn btn-primary" %>
+                <%= button_to "Delete", tool_path(tool), method: :delete, data: { confirm: "Are you sure you want to delete this tool?" }, class: "btn btn-danger" %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
