--- a/app/views/tools/_form.html.erb
+++ b/app/views/tools/_form.html.erb
@@ -3,7 +3,6 @@
     <% if @tool.errors.any? %>
       <div id="error_explanation" class="alert alert-danger">
         <h2><%= pluralize(@tool.errors.count, "error") %> prohibited this tool from being saved:</h2>
-
         <ul>
           <% @tool.errors.full_messages.each do |message| %>
             <li><%= message %></li>
@@ -12,56 +11,37 @@
       </div>
     <% end %>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= form.label :name %>
-          <%= form.text_field :name, class: 'form-control' %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= form.label :description %>
-          <%= form.text_field :description, class: 'form-control' %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= form.label :name %>
+      <%= form.text_field :name, class: 'form-control' %>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= form.label :address %>
-          <%= form.text_field :address, class: 'form-control' %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= form.label :availability %>
-          <%= form.text_field :availability, class: 'form-control' %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= form.label :description %>
+      <%= form.text_field :description, class: 'form-control' %>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= form.label :photo %>
-          <%= form.file_field :photo, class: 'form-control' %>
-        </div>
-      </div>
+    <div class="form-group">
+      <%= form.label :address %>
+      <%= form.text_field :address, class: 'form-control' %>
     </div>
+
+    <div class="form-group">
+      <%= form.label :availability %>
+      <%= form.text_field :availability, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :photo %>
+      <%= form.file_field :photo, class: 'form-control' %>
+    </div>
+
     <br>
-    <div class="row">
-      <div class="col-md-12 d-flex justify-content-between">
-        <div class="form-actions">
-          <%= form.submit 'Save', class: 'btn btn-primary' %>
-        </div>
-        <div class="form-actions">
-          <%= link_to 'Cancel', tools_path, class: 'btn btn-danger' %>
-        </div>
-      </div>
+
+    <div class="form-actions text-center">
+      <%= form.submit 'Save', class: 'btn btn-primary' %>
+      <%= link_to 'Cancel', tools_path, class: 'btn btn-danger' %>
     </div>
+
   <% end %>
 </div>
