--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "banner";
+@import "button";
+@import "footer";
 @import "form_legend_clear";
 @import "navbar";
-@import "footer";
