--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -4,11 +4,12 @@
       <div class="image-container mt-4">
   <!-- Adicione suas imagens aqui -->
         <% if @tool.photo.present? %>
-          <%= cl_image_tag @tool.photo.key, height: 300, width: 650, crop: :fill %>
+          <%= cl_image_tag @tool.photo.key, height: 500, width: 515, crop: :fill, fetch_format: :auto %>
         <% else %>
           <p>No image available</p>
         <% end %>
       </div>
+      <br>
 
       <h1><%= @tool.name %></h1>
 
@@ -18,24 +19,22 @@
 
       <p><strong>Address:</strong> <%= @tool.address %></p>
 
-        <div style="width: 100%; height: 600px;"
+        <div style="width: 100%; height: 300px;"
               data-controller="map"
               data-map-markers-value="<%= @markers.to_json %>"
               data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
         </div>
-
-
     <div class="btn-toolbar mt-4">
         <div class="mt-2">
-          <%= link_to 'Book', new_tool_booking_path(@tool), class: "btn btn-primary" %>
+          <% unless current_user == @tool.user %>
+            <%= link_to 'Book', new_tool_booking_path(@tool), class: "btn btn-primary" %>
+          <% end %>
         </div>
-
         <div class="mt-2">
           <%= link_to 'Back to Tools', tools_path, class: "btn btn-secondary" %>
         </div>
-
-    </div>
+      </div>
     </div>
   </div>
-
 </div>
+<br>
