--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Welcome to Your Dashboard, <%= current_user.first_name %>!</h1>
-  
+
   <div class="card mt-4">
     <div class="card-header">
       <h2>Bookings:</h2>
@@ -43,6 +43,37 @@
               <div class="btn-group">
                 <%= link_to "Edit", edit_tool_path(tool), class: "btn btn-primary" %>
                 <%= button_to "Delete", tool_path(tool), method: :delete, data: { confirm: "Are you sure you want to delete this tool?" }, class: "btn btn-danger" %>
+
+  <!-- with the booking card here -->
+                  <div class="bookings">
+  <% @bookings.each do |booking| %>
+    <div class="booking">
+      <div class='booking-left'>
+        <!-- if you're using cloudinary and activestorage -->
+        <div class="booking-info">
+          <div class="booking-info-title">
+            <%= booking.user.first_name %> <%= booking.user.last_name %>
+          </div>
+          <div class="booking-info-details">
+            <%= booking.rental_start.strftime('%l:%M %p') %> - <%= booking.rental_end.strftime('%l:%M %p') %>
+          </div>
+        </div>
+      </div>
+      <div class="booking-actions">
+        <% if booking.pending? %>
+          <%= simple_form_for booking do |f| %>
+            <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
+            <%= f.submit 'Accept', class: 'btn btn-info' %>
+          <% end %>
+          <%= simple_form_for booking do |f| %>
+            <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
+            <%= f.submit 'Reject', class: 'btn btn-light' %>
+          <% end %>
+        <% else %>
+          <p class='booking-tag'><%= booking.status %></p>
+        <% end %>
+      </div>
+                <% end %>
               </div>
             </div>
           </div>
@@ -51,15 +82,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
