--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,6 +17,11 @@
               <h5 class="card-title">Rental Start: <%= booking.rental_start %></h5>
               <h5 class="card-title">Rental End: <%= booking.rental_end %></h5>
             </div>
+            <% if booking.pending? %>
+                        <p>Pending</p>
+                      <% else %>
+                        <p class='booking-tag'><%= booking.status %></p>
+                      <% end %>
           </div>
         <% end %>
       <% end %>
@@ -29,12 +34,12 @@
     <div class="card-header">
       <h2>My Tools:</h2>
     </div>
-   <div class="container mx-auto">
-    <div class="row justify-content-center">
-      <% @tools.each do |tool| %>
-        <div class="col-10 col-md-4 col-lg-3 mb-4">
-          <br>
-          <div class="card rounded shadow">
+    <div class="container mx-auto">
+      <div class="row justify-content-center">
+        <% @tools.each do |tool| %>
+          <div class="col-10 col-md-4 col-lg-3 mb-4">
+            <br>
+            <div class="card rounded shadow">
             <% if tool.photo.present? %>
               <%= cl_image_tag tool.photo.key, class: 'card-img-top' %>
             <% else %>
@@ -47,47 +52,35 @@
               <div class="btn-group">
                 <%= link_to "Edit", edit_tool_path(tool), class: "btn btn-primary" %>
                 <%= button_to "Delete", tool_path(tool), method: :delete, data: { confirm: "Are you sure you want to delete this tool?" }, class: "btn btn-danger" %>
-
-  <!-- with the booking card here -->
-                  <div class="bookings">
-  <% @bookings.each do |booking| %>
-    <div class="booking">
-      <div class='booking-left'>
-        <!-- if you're using cloudinary and activestorage -->
-        <div class="booking-info">
-          <div class="booking-info-title">
-            <%= booking.user.first_name %> <%= booking.user.last_name %>
-          </div>
-          <div class="booking-info-details">
-            <%= booking.rental_start.strftime('%l:%M %p') %> - <%= booking.rental_end.strftime('%l:%M %p') %>
-          </div>
-        </div>
-      </div>
-      <div class="booking-actions">
-      <%= link_to 'View Tool', tool, class: "btn btn-primary btn-sm mr-2" %>
-              <%= link_to "Edit", edit_tool_path(tool), class: "btn btn-success btn-sm mr-2" %>
-              <%= button_to "Delete", tool_path(tool), method: :delete, data: { confirm: "Are you sure you want to delete this tool?" }, class: "btn btn-danger btn-sm mt-2" %>
-        <% if booking.pending? %>
-          <%= simple_form_for booking do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
-            <%= f.submit 'Accept', class: 'btn btn-info' %>
-          <% end %>
-          <%= simple_form_for booking do |f| %>
-            <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
-            <%= f.submit 'Reject', class: 'btn btn-light' %>
-          <% end %>
-        <% else %>
-          <p class='booking-tag'><%= booking.status %></p>
-        <% end %>
-      </div>
+              </div>
+                <!-- with the booking card here -->
+              <div class="bookings">
+                <% @bookings.each do |booking| %>
+                  <div class="booking">
+                    <div class='booking-left'>
+                      <!-- if you're using cloudinary and activestorage -->
+                      <div class="booking-info">
+                        <div class="booking-info-title">
+                          <%= booking.user.first_name %> <%= booking.user.last_name %>
+                        </div>
+                        <div class="booking-info-details">
+                          <%= booking.rental_start.strftime('%l:%M %p') %> - <%= booking.rental_end.strftime('%l:%M %p') %>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="booking-actions">
+                      <%= link_to 'View Tool', tool, class: "btn btn-primary btn-sm mr-2" %>
+                      <%= link_to "Edit", edit_tool_path(tool), class: "btn btn-success btn-sm mr-2" %>
+                      <%= button_to "Delete", tool_path(tool), method: :delete, data: { confirm: "Are you sure you want to delete this tool?" }, class: "btn btn-danger btn-sm mt-2" %>
+                      
+                    </div>
+                  </div>
                 <% end %>
               </div>
             </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
-  </div>
-
   </div>
 </div>
