--- a/app/views/tools/edit.html.erb
+++ b/app/views/tools/edit.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back to Tool', @tool %> 
+<%= link_to 'Back to Tool', @tool %>
+
+<div class="form-actions text-center">
+  <%= button_to 'Update Tool', @tool, method: :patch, class: 'btn btn-primary' %>
+</div>
