--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="px-4 text-center">
+<div class="px-4 my-5 text-center">
   <h1 class="display-5">ToolConnect</h1>
 </div>
 
@@ -16,6 +16,6 @@
       <br>
       <br>
       <br>
-      <p class="lead mb-4">A marketplace to share tools, but with money</p>
+      <p class="lead mb-4 my-5">A marketplace to share tools, but with money</p>
     </div>
   </div>
