--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,39 @@
-<div class="px-4 text-center">
-  <h1 class="display-5">ToolConnect</h1>
+<div class="jumbotron" style="height: 300px; background-color: #A9A091;">
+<br>
+<br>
+  <div class="container pt-6">
+    <h1 class="display-3">ToolConnect</h1>
+    <h5>A marketplace to share tools, but with money.</h5>
+    <br>
+    <% if user_signed_in? %>
+      <%= link_to "Find tools", tools_path, class:"button-55" %>
+    <% else %>
+      <%= link_to "Find tools", tools_path, class:"button-55" %>
+      <%= link_to "Log in", new_user_session_path, class:"button-55" %>
+    <% end %>
+  </div>
 </div>
 
-<div class="px-4 py-5 my-5 text-center">
-    <div class="col-lg-6 py-5 mx-auto">
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <% if user_signed_in? %>
-          <%= link_to "Find tools", tools_path, class:"button-55" %>
-        <% else %>
-          <%= link_to "Find tools", tools_path, class:"button-55" %>
-          <%= link_to "Log in", new_user_session_path, class:"button-55" %>
-        <% end %>
+<br>
+<div class="container">
+        <div class="row">
+          <div class="col-md-4 mt-4">
+            <h2>Efficiency</h2>
+            <p>You will be able to check availability and do booking confirmations. This saves time for you and the rental service, making the entire process more efficient and convenient for you.</p>
+            <%= link_to "Find tools", tools_path, class:"button-55" %>
+          </div>
+          <div class="col-md-4 mt-4">
+            <h2>Accessibility</h2>
+            <p>You can access a wide range of tools from Berlin at any time. Whether they are at home, at work, or on the go, you can quickly find and rent the tools you need without limitations of traditional business hours or location constraints.</p>
+            <%= link_to "Find tools", tools_path, class:"button-55" %>
+          </div>
+          <div class="col-md-4 mt-4">
+            <h2>Convenience</h2>
+            <p>You can easily browse and rent tools from the comfort of your own devices. You can search for specific tools, view availability, and make bookings at your convenience, without the need to visit a physical store or make phone calls.</p>
+            <%= link_to "Find tools", tools_path, class:"button-55" %>
+          </div>
+        </div>
+
+        <hr>
+
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <p class="lead mb-4">A marketplace to share tools, but with money</p>
-    </div>
-  </div>
