--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,30 +1,26 @@
+<br><br>
 <div class="container">
   <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <div class="image-container mt-4">
-  <!-- Adicione suas imagens aqui -->
+    <div class="col-md-6">
+      <div class="image-container mt-4 d-flex justify-content-center">
+        <!-- Adicione suas imagens aqui -->
         <% if @tool.photo.present? %>
-          <%= cl_image_tag @tool.photo.key, height: 500, width: 515, crop: :fill, fetch_format: :auto %>
+          <%= cl_image_tag @tool.photo.key, class: "img-fluid", height: 500, width: 520, crop: :fill, fetch_format: :auto %>
         <% else %>
           <p>No image available</p>
         <% end %>
       </div>
-      <br>
-
+    </div>
+    
+    <div class="col-md-6">
+    <br>
       <h1><%= @tool.name %></h1>
-
-
       <p><%= @tool.description %></p>
       <p><strong>Availability:</strong> <%= @tool.availability ? 'Available' : 'Not available' %></p>
-
       <p><strong>Address:</strong> <%= @tool.address %></p>
-
-        <div style="width: 100%; height: 300px;"
-              data-controller="map"
-              data-map-markers-value="<%= @markers.to_json %>"
-              data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-        </div>
-    <div class="btn-toolbar mt-4">
+      <div style="width: 100%; height: 300px;" data-controller="map" data-map-markers-value="<%= @markers.to_json %>" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+      <div class="btn-toolbar mt-4">
         <div class="mt-2">
           <% unless current_user == @tool.user %>
             <%= link_to 'Book', new_tool_booking_path(@tool), class: "btn btn-primary" %>
@@ -38,3 +34,5 @@
   </div>
 </div>
 <br>
+
+
