Changed the logo redirect to tools

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon bg-white">
   <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
+    <%= link_to tools_path, class: "navbar-brand" do %>
       <%= image_tag "toolconnect2.png" %>
     <% end %>
 
