Fixed the size of the content in the tool cards

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  margin: 10;
+  background: rgba(253, 253, 253, 0.3);
+  position: sticky;
+  top: 0;
+  text-shadow: 1;
 }
 
 .navbar-lewagon .navbar-collapse {
