--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -18,8 +18,8 @@
   <div class="row justify-content-center">
     <% @tools.each do |tool| %>
       <div class="col-10 col-md-4 col-lg-3 mb-4">
-        <%= link_to tool, class: "card-link" do %>
-          <div class="card rounded shadow">
+        <%= link_to tool, class:"card-link" do %>
+          <div class="card rounded-4 shadow overflow-hidden" style="height: 355px;">
             <% if tool.photo.attached? %>
               <%= cl_image_tag tool.photo.key, class: 'card-img-top' %>
             <% else %>
@@ -28,7 +28,6 @@
             <div class="card-body">
               <h5 class="card-title"><strong><%= tool.name %></strong></h5>
               <p class="card-text"><%= tool.description %></p>
-              <p class="card-text"><strong>Availability:</strong> <%= tool.availability ? 'Available' : 'Not available' %></p>
             </div>
           </div>
         <% end %>
