changed position of the footer

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,7 @@
 <br><br>
-<div class="container">
+<div class="container" style="height:80vh">
   <h1>Welcome to Your Dashboard, <%= current_user.first_name %>!</h1>
-  
+
   <div class="card mt-4">
     <div class="card-header">
       <h2>Bookings:</h2>
@@ -60,15 +60,3 @@
 
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
