Removed buttons from homepage containers

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,17 +20,17 @@
           <div class="col-md-4 mt-4">
             <h2>Efficiency</h2>
             <p>You will be able to check availability and do booking confirmations. This saves time for you and the rental service, making the entire process more efficient and convenient for you.</p>
-            <%= link_to "Find tools", tools_path, class:"button-55" %>
+            <%# <%= link_to "Find tools", tools_path, class:"button-55" %>
           </div>
           <div class="col-md-4 mt-4">
             <h2>Accessibility</h2>
             <p>You can access a wide range of tools from Berlin at any time. Whether they are at home, at work, or on the go, you can quickly find and rent the tools you need without limitations of traditional business hours or location constraints.</p>
-            <%= link_to "Find tools", tools_path, class:"button-55" %>
+            <%# <%= link_to "Find tools", tools_path, class:"button-55" %>
           </div>
           <div class="col-md-4 mt-4">
             <h2>Convenience</h2>
             <p>You can easily browse and rent tools from the comfort of your own devices. You can search for specific tools, view availability, and make bookings at your convenience, without the need to visit a physical store or make phone calls.</p>
-            <%= link_to "Find tools", tools_path, class:"button-55" %>
+            <%# <%= link_to "Find tools", tools_path, class:"button-55" %>
           </div>
         </div>
 
